# io_dev

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/io_dev/: dev.h  file.h
src/: file.cpp
tests/: test_file.cpp
tests/data/: file.txt
